# paper-pipeline

./: .gitignore  AGENTS.md  ARCHITECTURE.md  LICENSE  README.md  pyproject.toml
src/paper_pipeline/: formatting.py  locking.py  models.py  nougat_setup.py  paper_pipeline.py  rdf_parser.py  runner.py  state.py
src/paper_pipeline/steps/: __init__.py  nougat_step.py  registry.py
src/paper_pipeline/web/: app.py  cli.py  worker.py
src/paper_pipeline/web/static/: app.js  style.css
src/paper_pipeline/web/templates/: base.html  dashboard.html  detail.html  detail_fragment.html
